plugins {
    id 'java'
}

group 'org.example'
version '1.0-SNAPSHOT'


repositories {
    mavenCentral()
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

dependencies {
    compileOnly 'org.liquibase:liquibase-core:4.4.3'

}
